# lextures

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.observability.yml  docker-compose.scale.yml  docker-compose.yml
.cursor/rules/: testing.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: vpat-update.yml
.github/workflows/: ci-android.yml  ci-ios.yml  ci.yml  deploy-demo.yml  deploy-production.yml  deploy-self-aws.yml  deploy-self.yml  lighthouse.yml  pages-www.yml  publish-images.yml
clients/: mobile-dev.env.example
clients/android/: .gitignore  README.md  gradle.properties  local.properties.example  settings.gradle.kts
clients/cli/: go.mod  (+1 more)
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
clients/desktop/src-tauri/src/: main.rs
docs/: ARCH.md  CLOUD.md  MISSING_FEATURES.md  MOBILE_PLAN.md  SECURITY_ISSUES.md  TECH_STACK.md  ai-providers-byok.md  api-changelog-ai-providers.md  deploy-pipeline.md  design-tokens.md  getting-started.md  marketplace-courses-authoring.md  www-design.md
e2e/: README.md  global-setup.ts  node_modules  package-lock.json  package.json  playwright.config.ts
scripts/: audit-animations.ts  check-homeschool-terminology.sh  check-mobile-a11y.sh  check-mobile-i18n.sh  check-openrouter-coupling.sh  desktop.sh  homeschool-terminology-allow.txt  sync-mobile-locales.py
server/: .air.toml  .env.example  Dockerfile  Dockerfile.dev  Makefile  docker-entrypoint.dev.sh  go.mod  go.sum  serverdata.go
www/: .oxlintrc.json  index.html  package-lock.json  package.json  vite.config.ts
(+7008 files in other folders)
