[package]
name = "lextures-desktop"
version = "0.1.0"
description = "Lextures desktop app"
authors = ["Lextures"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/StudyDrift/lextures"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lextures_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20"
