[package]
name = "lextures-desktop"
version = "0.1.0"
description = "Lextures desktop app"
authors = ["Lextures"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/StudyDrift/lextures"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lextures_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"

# Tauri's GTK3 stack pins glib 0.18.x until upstream moves to gtk-rs 0.20.
# Patch in the VariantStrIter unsoundness fix (RUSTSEC-2024-0429 / GHSA-wrw7-89jp-8q8g).
[patch.crates-io]
glib = { path = "patches/glib-0.18.5-patched" }
